refatorando view pesquisa

--- a/src/LaboratorioGestor/Views/Account/Login.cshtml
+++ b/src/LaboratorioGestor/Views/Account/Login.cshtml
@@ -8,7 +8,7 @@
 
 <br />
 
-<style>
+@*<style>
     body {
         margin-bottom: 350px;
         display: -ms-flexbox;
@@ -19,7 +19,7 @@
         padding-bottom: 40px;
         background-color: #E9ECEF;
     }
-</style>
+</style>*@
 
 
 <form class="form-signin" asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]">
