--- a/src/LaboratorioGestor/Views/Shared/_Layout.cshtml
+++ b/src/LaboratorioGestor/Views/Shared/_Layout.cshtml
@@ -12,39 +12,40 @@
 
 </head>
 <body class="text-center">
-    <header class="text-center">
+    <header class="text-center" style="background-color:#5175E6">
 
         @if (User.Identity.IsAuthenticated)
-        {
-            <nav class="navbar bg-light navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+                {
+            //bg-white bg-light
+            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
                 <div class="container">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                    <div class=" navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                         <partial name="_LoginPartial" />
                         <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Laboratorios" asp-action="Index">Laboratorios</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="Laboratorios" asp-action="Index">Laboratorios</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Protetico" asp-action="Index">Protéticos</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="Protetico" asp-action="Index">Protéticos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Dentistas" asp-action="Index">Dentistas</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="Dentistas" asp-action="Index">Dentistas</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Produtos" asp-action="Index">Produtos</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="Produtos" asp-action="Index">Produtos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Servicos" asp-action="Index">Servicos</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="Servicos" asp-action="Index">Servicos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Cobrancas" asp-action="Index">Cobranças</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="Cobrancas" asp-action="Index">Cobranças</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Recebimentos" asp-action="Index">Receimentos</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="Recebimentos" asp-action="Index">Receimentos</a>
                             </li>
                         </ul>
                     </div>
