--- a/src/LaboratorioGestor/Views/Home/Index.cshtml
+++ b/src/LaboratorioGestor/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
-<div class="text-center ca-page-default ca-page-default-fold">
+@*ca-page-default ca-page-default-fold*@
+<div class="text-center dashboard-small-card-height slimbox is-raisable ca-u-z-index--200">
     <h1 class="display-4">Welcome @User.Identity.Name</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
