--- a/src/LaboratorioGestor/Views/Shared/_LoginPartial.cshtml
+++ b/src/LaboratorioGestor/Views/Shared/_LoginPartial.cshtml
@@ -6,19 +6,19 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav">
             <li>
-                <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Ola @User.Identity.Name!</a>
+                <a class="text-white" asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Ola @User.Identity.Name!</a>
             </li>
             <li class="nav-item">
-                <button type="submit" class="nav-link btn btn-link text-dark">Sair</button>
+                <button type="submit" class="text-white nav-link btn btn-link  text-white">Sair</button>
             </li>
         </ul>
     </form>
 }
 else
 {
-    <ul class="nav navbar-nav navbar-right" >
+    <ul class="nav navbar-nav">
         <li><a asp-area="" asp-controller="Account" asp-action="Register">Register</a></li>
         <li><a asp-area="" asp-controller="Account" asp-action="Login">Log in</a></li>
     </ul>
