--- a/src/LaboratorioGestor/wwwroot/css/site.css
+++ b/src/LaboratorioGestor/wwwroot/css/site.css
@@ -1,9 +1,11 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
-/** {
-    font-family: sans-serif;
-}*/
+html,
+body {
+    height: 100%;
+    background-color: #EFF3F8
+}
 
 a.navbar-brand {
     white-space: normal;
@@ -11,13 +13,117 @@ a.navbar-brand {
     word-break: break-all;
 }
 
-input {
-    color: #93979C;
+h1 {
+    text-align: left !important;
 }
 
-/*a {
-    color: #0366d6;
-}*/
+h3 {
+    text-align: left !important;
+}
+
+h2 {
+    text-align: left !important;
+}
+
+.col-xs-2 {
+    width: 16.66667%;
+}
+
+
+.col-xs-10 {
+    width: ‬20.00000%‬;
+}
+
+.col-xs {
+    position: relative;
+    min-height: 1px;
+    padding-left: .9375rem;
+    padding-right: .9375rem;
+    float: left;
+}
+
+
+.flat-btn.flat-btn-primary {
+    background-color: #4AB858;
+    border: 1px solid #4AB858;
+    color: #FFFFFF;
+}
+
+.flat-btn.size-flex {
+    width: 100%;
+}
+
+.btn-group > .flat-btn {
+    float: none;
+    display: inline-block;
+    position: relative;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+    -webkit-border-top-left-radius: 3px;
+    -webkit-border-bottom-left-radius: 3px;
+    -moz-border-radius-topleft: 3px;
+    -moz-border-radius-bottomleft: 3px;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+}
+
+.btn-group > .btn:last-child, .btn-group > .dropdown-toggle {
+    -webkit-border-top-right-radius: 3px;
+    border-top-right-radius: 3px;
+    -webkit-border-bottom-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+    -moz-border-radius-topright: 3px;
+    -moz-border-radius-bottomright: 3px;
+}
+
+.ca-input-group {
+    position: relative;
+    display: table;
+    border-collapse: separate;
+}
+
+.ca-input-group-btn {
+    position: relative;
+    font-size: 0;
+    white-space: nowrap;
+}
+
+.flat-btn.flat-btn-primary {
+    background-color: #4AB858;
+    border: 1px solid #4AB858;
+    color: #FFFFFF;
+}
+
+.ca-input-group-addon:first-child, .ca-input-group-btn:first-child > .ca-btn, .ca-input-group-btn:first-child > .ca-btn-group > .ca-btn, .ca-input-group-btn:first-child > .ca-btn-group > .hopscotch-bubble .hopscotch-nav-button, .ca-input-group-btn:first-child > .dropdown-toggle, .ca-input-group-btn:first-child > .hopscotch-bubble .hopscotch-nav-button, .ca-input-group-btn:last-child > .ca-btn-group:not(:last-child) > .ca-btn, .ca-input-group-btn:last-child > .ca-btn-group:not(:last-child) > .ca-submit-button .ca-btn, .ca-input-group-btn:last-child > .ca-btn-group:not(:last-child) > .ca-submit-button .hopscotch-bubble .hopscotch-nav-button, .ca-input-group-btn:last-child > .ca-btn-group:not(:last-child) > .hopscotch-bubble .hopscotch-nav-button, .ca-input-group-btn:last-child > .ca-btn:not(:last-child):not(.dropdown-toggle), .ca-input-group-btn:last-child > .hopscotch-bubble .hopscotch-nav-button:not(:last-child):not(.dropdown-toggle), .ca-input-group .ca-form-control:first-child {
+    border-bottom-right-radius: 0;
+    border-top-right-radius: 0;
+    display: table-cell;
+    background-color: #fff;
+}
+
+.ca-input-group .ca-form-control {
+    position: relative;
+    z-index: 2;
+    float: left;
+    width: 100%;
+    margin-bottom: 0;
+}
+
+.ca-heading--title {
+    font-weight: 600;
+    font-size: 26px;
+}
+
+.ca-u-vertical-offset3 {
+    margin-top: 30px !important;
+}
+
+.ca-heading--subtitle-alt {
+    font-weight: 400;
+    font-size: 18px;
+    margin-top: 25px
+}
 
 .btn-primary {
     color: #fff;
@@ -33,12 +139,6 @@ input {
 
 /* Sticky footer styles
 -------------------------------------------------- */
-html,
-body {
-    height: 100%;
-    background-color: #EFF3F8
-}
-
 html {
     font-size: 14px;
 }
@@ -69,9 +169,9 @@ html {
     min-height: 100%;
 }
 
-body {
+/*body {
     margin-bottom: 60px;
-}
+}*/
 
 .ca-page-default.ca-page-default-fold {
     position: relative;
@@ -111,10 +211,8 @@ body {
     position: relative;
     -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
     box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
-    /*text-align: center;*/
+    text-align: center;
 }
-
-
 
     .form-signin .checkbox {
         font-weight: 400;
@@ -145,10 +243,39 @@ body {
         border-top-right-radius: 0;
     }
 
+.slimbox.is-raisable, ca-slimbox.is-raisable div {
+    box-sizing: border-box;
+    transition: all .25s ease;
+    -webkit-transition: all .25s ease;
+    position: relative;
+    cursor: pointer;
+}
+
+.slimbox {
+    position: relative;
+    min-height: 160px;
+    background-color: #FFFFFF;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    box-sizing: border-box;
+    padding: 30px;
+    border: 1px solid #C9D3DD;
+    box-shadow: 0 0 10px 0 rgba(201,211,221,0.4);
+}
+
+.ca-u-z-index--200 {
+    z-index: 200 !important;
+}
+
+.dashboard-small-card-height, .dashboard-small-card-height .slimbox-empty-container .slimbox {
+    height: 212px;
+}
+
 .footer {
     position: absolute;
     bottom: 0;
     width: 100%;
     white-space: nowrap;
-    line-height: 60px; /* Vertically center the text there */
+    line-height: 60px;
 }
