--- a/src/LaboratorioGestor/wwwroot/css/site.css
+++ b/src/LaboratorioGestor/wwwroot/css/site.css
@@ -25,89 +25,53 @@ h2 {
     text-align: left !important;
 }
 
-.col-xs-2 {
-    width: 16.66667%;
-}
-
-
-.col-xs-10 {
-    width: ‬20.00000%‬;
-}
-
-.col-xs {
-    position: relative;
-    min-height: 1px;
-    padding-left: .9375rem;
-    padding-right: .9375rem;
-    float: left;
-}
-
-
-.flat-btn.flat-btn-primary {
-    background-color: #4AB858;
-    border: 1px solid #4AB858;
-    color: #FFFFFF;
-}
-
-.flat-btn.size-flex {
-    width: 100%;
-}
-
-.btn-group > .flat-btn {
-    float: none;
-    display: inline-block;
-    position: relative;
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    border-radius: 0;
-    -webkit-border-top-left-radius: 3px;
-    -webkit-border-bottom-left-radius: 3px;
-    -moz-border-radius-topleft: 3px;
-    -moz-border-radius-bottomleft: 3px;
-    border-top-left-radius: 3px;
-    border-bottom-left-radius: 3px;
-}
-
-.btn-group > .btn:last-child, .btn-group > .dropdown-toggle {
-    -webkit-border-top-right-radius: 3px;
-    border-top-right-radius: 3px;
-    -webkit-border-bottom-right-radius: 3px;
-    border-bottom-right-radius: 3px;
-    -moz-border-radius-topright: 3px;
-    -moz-border-radius-bottomright: 3px;
-}
-
-.ca-input-group {
-    position: relative;
-    display: table;
-    border-collapse: separate;
-}
-
-.ca-input-group-btn {
-    position: relative;
-    font-size: 0;
-    white-space: nowrap;
+.form-row-semMargem{
+    padding: 0;
 }
 
 .flat-btn.flat-btn-primary {
     background-color: #4AB858;
     border: 1px solid #4AB858;
-    color: #FFFFFF;
+    color: #FFFFFF
 }
 
-.ca-input-group-addon:first-child, .ca-input-group-btn:first-child > .ca-btn, .ca-input-group-btn:first-child > .ca-btn-group > .ca-btn, .ca-input-group-btn:first-child > .ca-btn-group > .hopscotch-bubble .hopscotch-nav-button, .ca-input-group-btn:first-child > .dropdown-toggle, .ca-input-group-btn:first-child > .hopscotch-bubble .hopscotch-nav-button, .ca-input-group-btn:last-child > .ca-btn-group:not(:last-child) > .ca-btn, .ca-input-group-btn:last-child > .ca-btn-group:not(:last-child) > .ca-submit-button .ca-btn, .ca-input-group-btn:last-child > .ca-btn-group:not(:last-child) > .ca-submit-button .hopscotch-bubble .hopscotch-nav-button, .ca-input-group-btn:last-child > .ca-btn-group:not(:last-child) > .hopscotch-bubble .hopscotch-nav-button, .ca-input-group-btn:last-child > .ca-btn:not(:last-child):not(.dropdown-toggle), .ca-input-group-btn:last-child > .hopscotch-bubble .hopscotch-nav-button:not(:last-child):not(.dropdown-toggle), .ca-input-group .ca-form-control:first-child {
-    border-bottom-right-radius: 0;
-    border-top-right-radius: 0;
-    display: table-cell;
-    background-color: #fff;
+    .flat-btn.flat-btn-primary:focus {
+        box-shadow: 0 0 0 2px rgba(185, 227, 190, 0.8)
+    }
+
+    .flat-btn.flat-btn-primary:active,
+    .flat-btn.flat-btn-primary.active {
+        box-shadow: inset 0 1px 3px 0 #0E731B
+    }
+
+    .flat-btn.flat-btn-primary:hover {
+        background-color: rgba(74, 184, 88, 0.8);
+        border: 1px solid #4AB858
+    }
+
+.flat-btn .caret {
+    border-top: 4px solid #0052A5;
+    position: absolute;
+    top: 19px;
+    right: 17px
 }
 
-.ca-input-group .ca-form-control {
-    position: relative;
-    z-index: 2;
-    float: left;
-    width: 100%;
-    margin-bottom: 0;
+.flat-btn.flat-btn-primary .caret,
+.flat-btn.flat-btn-secondary .caret {
+    border-top: 4px solid #FFFFFF
+}
+
+.btn-group > .btn + .btn {
+    margin-left: -1px
+}
+
+.flat-btn.disabled,
+.flat-btn.disabled:hover,
+.flat-btn.flat-btn-secondary.disabled:hover,
+.flat-btn:disabled,
+.flat-btn:disabled:hover {
+    cursor: not-allowed;
+    opacity: .4
 }
 
 .ca-heading--title {
@@ -125,11 +89,6 @@ h2 {
     margin-top: 25px
 }
 
-.btn-primary {
-    color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
-}
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
     color: #fff;
@@ -167,37 +126,6 @@ button.accept-policy {
 html {
     position: relative;
     min-height: 100%;
-}
-
-/*body {
-    margin-bottom: 60px;
-}*/
-
-.ca-page-default.ca-page-default-fold {
-    position: relative;
-}
-
-.ca-page-default {
-    border: 1px solid #c9d3dd;
-    padding: 50px 70px;
-    background-color: #fff;
-}
-
-    .ca-page-default.ca-page-default-fold:after {
-        content: "";
-        position: absolute;
-        top: -1px;
-        right: -1px;
-        width: 0;
-        height: 0;
-        border-color: #f1f4f9 #f1f4f9 #f1f4f9 #c9d3dd;
-        border-style: solid;
-        border-width: 40px 0 0 40px;
-    }
-
-*, *::before, *::after {
-    -webkit-box-sizing: inherit;
-    box-sizing: inherit;
 }
 
 .form-signin {
@@ -242,6 +170,33 @@ html {
         border-top-left-radius: 0;
         border-top-right-radius: 0;
     }
+
+.ca-page-default.ca-page-default-fold {
+    position: relative;
+}
+
+.ca-page-default {
+    border: 1px solid #c9d3dd;
+    padding: 50px 70px;
+    background-color: #fff;
+}
+
+    .ca-page-default.ca-page-default-fold:after {
+        content: "";
+        position: absolute;
+        top: -1px;
+        right: -1px;
+        width: 0;
+        height: 0;
+        border-color: #f1f4f9 #f1f4f9 #f1f4f9 #c9d3dd;
+        border-style: solid;
+        border-width: 40px 0 0 40px;
+    }
+
+*, *::before, *::after {
+    -webkit-box-sizing: inherit;
+    box-sizing: inherit;
+}
 
 .slimbox.is-raisable, ca-slimbox.is-raisable div {
     box-sizing: border-box;
